# pactrail

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml  repository-scale.yml
benchmarks/issue-replay-heldout-v1/: README.md  cases.json  gold-validation.json  opencode-deepseek.json
benchmarks/issue-replay-heldout-v1/hidden/: reqwest-request-parts.rs  smallvec-leak-security.rs
benchmarks/issue-replay-v1/: README.md  cases.json  opencode-deepseek.json  run.ps1
benchmarks/issue-replay-v1-confirmation/: README.md  cases-pro-replication.json  cases.json  gold-validation.json  opencode-deepseek-pro.json  opencode-deepseek.json
benchmarks/issue-replay-v1-confirmation/hidden/: http-header-map-reserve.rs  regex-onepass-slots.rs  ripgrep-byte-stats.rs
benchmarks/issue-replay-v1/normalizations/: bytes-windows.patch  fd-windows.patch
benchmarks/mvb-v1/: README.md  cases.json  opencode-deepseek.json  run-opencode.ps1  run.ps1
benchmarks/repository-scale/: README.md
benchmarks/results/2026-07-17-openrouter-free/: README.md  SHA256SUMS  candidate-grades.json  environment.json
benchmarks/results/2026-07-17-openrouter-free/20260717T044608Z-poolside-laguna-m.1-free/: SUMMARY.md  summary.json
benchmarks/results/2026-07-17-openrouter-free/20260717T044608Z-poolside-laguna-m.1-free/localized-bug-repair/: result.json  run-stderr.txt  trace-render.json  trace.jsonl
benchmarks/results/2026-07-17-openrouter-free/20260717T044608Z-poolside-laguna-m.1-free/multi-file-version-sync/: result.json  run-stderr.txt  trace-render.json  trace.jsonl
benchmarks/results/2026-07-17-openrouter-free/20260717T044608Z-poolside-laguna-m.1-free/targeted-config-edit/: result.json  run-stderr.txt  trace-render.json  trace.jsonl
benchmarks/results/2026-07-17-windows-arm64/: README.md
benchmarks/results/2026-07-17-windows-arm64/20260717T012033Z-lfm-230m/: SUMMARY.md  summary.json
benchmarks/results/2026-07-17-windows-arm64/20260717T012212Z-qwopus3.5-9b-coder-q3km/: SUMMARY.md  summary.json
benchmarks/results/2026-07-18-deepseek-v4/: README.md  SHA256SUMS  audit.json  comparison.json  environment.json  protocol.json
benchmarks/results/2026-07-18-local-models/: .gitattributes  README.md  SHA256SUMS  comparison.json  environment.json  protocol.json
benchmarks/results/2026-07-18-local-models/pilots/bonsai-timeout-300/: SUMMARY.md  (+1 more)
benchmarks/results/2026-07-18-local-models/runtime-logs/: bonsai-llama-bench.jsonl  gemma4-llama-bench.jsonl
benchmarks/results/2026-07-18-real-issue-replay/: .gitattributes  README.md  SHA256SUMS  audit.json  comparison.json  environment.json  protocol.json
benchmarks/results/2026-07-22-v1-confirmation/: README.md  SHA256SUMS  audit.json  comparison.json  environment.json  protocol.json
crates/pactrail-cli/: Cargo.toml
crates/pactrail-cli/src/: cli.rs  commands.rs  compatibility.rs  diff.rs  interactive.rs  main.rs  mcp.rs  migration.rs  output.rs  settings.rs  theme.rs  upgrade.rs
crates/pactrail-cli/tests/: end_to_end.rs
crates/pactrail-context/: Cargo.toml
crates/pactrail-context/examples/: repository_scale.rs
crates/pactrail-context/src/: lib.rs
crates/pactrail-core/: Cargo.toml
crates/pactrail-core/src/: approval.rs  contract.rs  event.rs  evidence.rs  id.rs  lib.rs  policy.rs  receipt.rs
crates/pactrail-engine/: Cargo.toml
crates/pactrail-engine/src/: adaptive.rs  checkpoint.rs  context_window.rs  controller.rs  engine.rs  lib.rs  verification.rs
crates/pactrail-git/: Cargo.toml
crates/pactrail-git/src/: lib.rs
crates/pactrail-mcp/: Cargo.toml
crates/pactrail-mcp/src/: lib.rs  manifest.rs  schema.rs  snapshot.rs  tool.rs  transport.rs
crates/pactrail-memory/: Cargo.toml
crates/pactrail-memory/src/: lib.rs
crates/pactrail-models/: Cargo.toml
crates/pactrail-models/src/: anthropic.rs  driver.rs  gemini.rs  lib.rs  openai_compatible.rs  probe.rs  sse.rs  test_support.rs  types.rs
crates/pactrail-sdk/: Cargo.toml
crates/pactrail-sdk/src/: lib.rs
crates/pactrail-sdk/tests/: embedding_api.rs
crates/pactrail-store/: Cargo.toml
crates/pactrail-store/src/: artifact.rs  event_store.rs  lib.rs
crates/pactrail-tools/: Cargo.toml
crates/pactrail-tools/src/: advanced.rs  approval.rs  builtins.rs  git.rs  lib.rs  patch.rs  policy.rs  process.rs  process_backend.rs  registry.rs  structural.rs
crates/pactrail-tools/tests/: descriptor_budget.rs
crates/pactrail-workspace/: Cargo.toml
crates/pactrail-workspace/src/: lib.rs  manifest.rs  path.rs  transaction.rs
docs/: architecture.md  compatibility.md  development.md  embedding.md  interactive-cli.md  providers.md  release-v0.1.0.md  release-v0.2.0.md  release-v0.3.0.md  release-v0.4.0.md  release-v0.5.0.md  release-v0.6.0.md  release-v0.7.0.md  release-v1.0.0.md  releasing.md  research-foundations.md  roadmap.md  security-audit-v1.md  support.md  threat-model.md  upgrading.md
docs/design/: 0001-process-containment.md  0002-durable-resume.md  0003-provider-streaming.md  0004-mcp-ecosystem.md  0005-incremental-repository-index.md  0006-change-impact-retrieval.md  0007-structural-intelligence.md  0008-read-only-git-evidence.md  0009-integrity-bound-image-artifacts.md  0010-phase-aware-controller-kernel.md  0011-proactive-verification.md  0012-strict-unified-patch.md  0013-stale-resistant-memory.md  0014-capability-adaptive-runtime.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: event_envelope.rs  mcp_schema.rs  workspace_path.rs
tests/fixtures/compatibility/: manifest-v1.json
tests/fixtures/compatibility/historical/: event-database-v1.sql  event-envelope-v1.json  manifest-v1.json  memory-database-v1.sql  settings-v1.toml  settings-v2.toml  settings-v3.toml
tests/fixtures/oci-sandbox/: Dockerfile
tests/fixtures/upgrade/: deprecations-v1.json
(+861 files in other folders)
