[package]
name = "pactrail"
description = "A verification-native coding agent harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap.workspace = true
pactrail-core = { path = "../pactrail-core" }
pactrail-engine = { path = "../pactrail-engine" }
pactrail-models = { path = "../pactrail-models" }
pactrail-store = { path = "../pactrail-store" }
pactrail-tools = { path = "../pactrail-tools" }
pactrail-workspace = { path = "../pactrail-workspace" }
schemars.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "pactrail"
path = "src/main.rs"

[lints]
workspace = true
