[package]
name = "pactrail"
description = "A verification-native coding agent harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anstyle.workspace = true
clap.workspace = true
directories.workspace = true
futures-util.workspace = true
indicatif.workspace = true
pactrail-core = { version = "0.1.0", path = "../pactrail-core" }
pactrail-engine = { version = "0.1.0", path = "../pactrail-engine" }
pactrail-models = { version = "0.1.0", path = "../pactrail-models" }
pactrail-store = { version = "0.1.0", path = "../pactrail-store" }
pactrail-tools = { version = "0.1.0", path = "../pactrail-tools" }
pactrail-workspace = { version = "0.1.0", path = "../pactrail-workspace" }
reedline.workspace = true
reqwest.workspace = true
schemars.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "pactrail"
path = "src/main.rs"

[lints]
workspace = true
