[package]
name = "pactrail-engine"
description = "Execution and orchestration engine for Pactrail"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
blake3.workspace = true
futures-util.workspace = true
pactrail-context = { version = "0.4.0", path = "../pactrail-context" }
pactrail-core = { version = "0.4.0", path = "../pactrail-core" }
pactrail-memory = { version = "0.4.0", path = "../pactrail-memory" }
pactrail-models = { version = "0.4.0", path = "../pactrail-models" }
pactrail-store = { version = "0.4.0", path = "../pactrail-store" }
pactrail-tools = { version = "0.4.0", path = "../pactrail-tools" }
pactrail-workspace = { version = "0.4.0", path = "../pactrail-workspace" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
