[package]
name = "pactrail-git"
description = "Bounded, process-free Git evidence for Pactrail"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
gix.workspace = true
ignore.workspace = true
pactrail-workspace = { version = "1.0.0", path = "../pactrail-workspace" }
serde.workspace = true
similar.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
