[package]
name = "pactrail-models"
description = "Capability-driven model providers for Pactrail"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
blake3.workspace = true
futures-util.workspace = true
httpdate.workspace = true
pactrail-core = { version = "0.7.0", path = "../pactrail-core" }
pactrail-tools = { version = "0.7.0", path = "../pactrail-tools" }
reqwest.workspace = true
schemars.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
