[package]
name = "pactrail-sdk"
description = "Stable Rust embedding facade for the Pactrail coding-agent kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
pactrail-context = { version = "0.7.0", path = "../pactrail-context" }
pactrail-core = { version = "0.7.0", path = "../pactrail-core" }
pactrail-engine = { version = "0.7.0", path = "../pactrail-engine" }
pactrail-mcp = { version = "0.7.0", path = "../pactrail-mcp" }
pactrail-memory = { version = "0.7.0", path = "../pactrail-memory" }
pactrail-models = { version = "0.7.0", path = "../pactrail-models" }
pactrail-store = { version = "0.7.0", path = "../pactrail-store" }
pactrail-tools = { version = "0.7.0", path = "../pactrail-tools" }
pactrail-workspace = { version = "0.7.0", path = "../pactrail-workspace" }
tokio-util.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
