[package]
name = "pactrail-store"
description = "Durable event and artifact storage for Pactrail"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
blake3.workspace = true
pactrail-core = { path = "../pactrail-core" }
rusqlite.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
zstd.workspace = true

