[package]
name = "pactrail-tools"
description = "Typed, policy-aware tools for Pactrail"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
blake3.workspace = true
ignore.workspace = true
pactrail-core = { version = "0.1.0", path = "../pactrail-core" }
pactrail-workspace = { version = "0.1.0", path = "../pactrail-workspace" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
