[package]
name = "pactrail-workspace"
description = "Isolated workspace transactions for Pactrail"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
blake3.workspace = true
ignore.workspace = true
pactrail-core = { version = "0.3.0", path = "../pactrail-core" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
